# prompt-engingeering-project

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.py  docker-compose.yml  models.py  pyproject.toml  routes.py  run.py  test_routes.py
app/: __init__.py  constants.py  database.py  decorators.py  extensions.py
app/controllers/: __init__.py  prompts.py
app/models/: __init__.py  conversation.py  openai_usage.py  prompt_response.py  role.py  team.py  user.py
app/routes/: __init__.py  openai.py  prompts.py  routes.py  test_routes.py  user.py
app/services/: __init__.py  openai_service.py  prompt_response_service.py  user_service.py
migrations/versions/: 071a6546fc40_user_regular_budget_at_150_and_non_.py  4ffd784181ce_add_new_column_called_responses.py  5887daab01dd_add_new_column_prompts.py  77c95426ef77_add_dummy_conversations_to_prompt_.py  897ea17c354c_add_openaiusage_table.py  9084d1fe30f7_remove_column_called_messages.py  953019ca42a6_add_team_id_to_the_prompt_response.py  98ec2b047e77_create_prompt_response_table.py  98fd3bdd909f_add_team_name_column_and_create_default_.py  9c35d26d3f60_promptresponse_table_foreign_key_.py  a924af2005c1_columns_for_the_prompt_response_content_.py  c3fd095f18a2_only_messages_as_a_column_from_.py  c5bf0fbb8979_user_and_team_tables_with_associations_.py  cdba6c51ae4d_change_back_population_of_user_to_team_.py  ce75154d5de7_remove_content_and_role_columns_from_.py  ee18938c5ff9_remove_column_prompt.py
routes/: routes.py
